# johnathan

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/versions/: 001_initial_schema.py  env.py
backend/app/: init.py  main.py
backend/app/api/: routes_instruments.py  routes_llm.py  routes_pnl.py  routes_positions.py  routes_reports.py  routes_risk.py  routes_trades.py
backend/app/core/: auth.py  config.py
backend/app/db/: init.py  models.py  session.py
backend/app/services/: connectors.py  exposure.py  llm.py  pnl.py  var.py
backend/app/ws/: __init__.py  stream.py
backend/tests/: test_pnl.py  test_var.py
deploy/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  init.sql
frontend/: jest.config.js  package.json  prettier.config.js
frontend/app/: global.css  layout.tsx
frontend/app/positions/: page.tsx
frontend/app/risk/: page.tsx
frontend/components/: KpiCard.tsx  LiveTicker.tsx  PnlChart.tsx  PositionsTable.tsx  ReportPanel.tsx  VarCard.tsx  page.tsx
frontend/lib/: api.ts
